Added missing doctype, clearing README

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Itcase</title>
@@ -67,7 +68,11 @@
 				</div>
 			</div>
 			<div class="Footer">
-				Футер
+				<p class="Copyright">© 1999—2011 «Сайт»</p>
+				<address>
+					<p>ул. Василия Пупкина 67, офис 123</p>
+					<p>Контактные телефоны: (343) 000-00-00</p>
+				</address>
 			</div>
 		</div>
 	</div>
