--- a/index.html
+++ b/index.html
@@ -7,40 +7,19 @@
 	<meta http-equiv="expires" content="0">
 	<meta http-equiv="pragma" content="no-cache">
 	<meta http-equiv="cache-control" content="no-cache">
-	<link href="/media/css/main.css" rel="stylesheet" type="text/css">
-	<link href="/media/css/csskit.css" rel="stylesheet" type="text/css">
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/csskit.css" rel="stylesheet" type="text/css">
+	<link href="css/popup.css" rel="stylesheet" type="text/css">
 	<!--[if lte IE 6]>
 		<link href="css/ie6.css" rel="stylesheet" type="text/css" />
 	<![endif]-->
-	<script type="text/javascript" src="/admin_media/js/jquery.min.js"></script>
-	<script type="text/javascript" src="/media/js/common.js"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
+	<script type="text/javascript" src="js/popupwindow.js"></script>
 </head>
 <body>
 	<div class="LeftMargin">&nbsp;</div>
 	<div class="RightMargin">&nbsp;</div>
-
-	<div class="HideBlock" id="HideBlock" style="display: none;">&nbsp;</div>
-	<div class="PopupWindow" id="PopupWindow" style="display: none;">
-		<div class="PopupWindowInner">
-			<div class="PopupWindowTR">
-				<div class="Popup">
-					<div class="d-shadow">
-						<div class="d-shadow-wrap">
-							<a class="PopupWindowClose" id="PopupWindowClose">Закрыть</a>
-							<div class="d-sh-cn d-sh-tl">&nbsp;</div>
-							<div class="d-sh-cn d-sh-tr">&nbsp;</div>
-							<div class="PopupContent" id="PopupContent"></div>
-							<div class="FormSend" id="FormSend">
-								<a href="#">Отправить заказ</a>
-							</div>
-						</div>
-						<div class="d-sh-cn d-sh-bl">&nbsp;</div>
-						<div class="d-sh-cn d-sh-br">&nbsp;</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div class="MaxWidth">
 		<div class="MinWidth">
@@ -65,6 +44,8 @@
 			<div class="Wrapper">
 				<div class="Content">
 					Контент
+					
+					<a href="#" class="ShowPopup">Показать попап</a>
 				</div>
 			</div>
 			<div class="Footer">
