--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Itcase</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="robots" content="none">
-	<meta http-equiv="expires" content="0">
-	<meta http-equiv="pragma" content="no-cache">
-	<meta http-equiv="cache-control" content="no-cache">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<link href="css/csskit.css" rel="stylesheet" type="text/css">
-	<link href="css/popup.css" rel="stylesheet" type="text/css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="robots" content="none"/>
+	<meta http-equiv="expires" content="0"/>
+	<meta http-equiv="pragma" content="no-cache"/>
+	<meta http-equiv="cache-control" content="no-cache"/>
+	<link href="css/main.css" rel="stylesheet" type="text/css"/>
+	<link href="css/csskit.css" rel="stylesheet" type="text/css"/>
+	<link href="css/popup.css" rel="stylesheet" type="text/css"/>
 	<!--[if lte IE 6]>
 		<link href="css/ie6.css" rel="stylesheet" type="text/css" />
 	<![endif]-->
