now using rotator2

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 	<title>Шаблон</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta charset="utf-8"/>
 	<meta name="robots" content="none"/>
 	<meta http-equiv="expires" content="0"/>
 	<meta http-equiv="pragma" content="no-cache"/>
@@ -16,7 +16,7 @@
 	<![endif]-->
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.rotator.js"></script>
+	<script type="text/javascript" src="js/jquery.rotator2.min.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript" src="js/popupwindow.js"></script>
 </head>
@@ -42,26 +42,26 @@
 						<a href="#" id="RotatorPrevLink" class="RotatorPrevLink"><span>&nbsp;</span></a>
 						<a href="#" id="RotatorNextLink" class="RotatorNextLink"><span>&nbsp;</span></a>
 						<div class="Rotator" id="Rotator">
-							<div class="RotatorItem">
+							<span class="RotatorItem">
 								<a href="#"><img src="http://farm7.static.flickr.com/6019/6312715714_3fa86a316f_b.jpg" alt=""/></a>
-							</div>
-							<div class="RotatorItem">
+							</span>
+							<span class="RotatorItem">
 								<a href="#"><img src="http://farm7.static.flickr.com/6215/6317900776_7bcfee5a03_b.jpg" alt=""/></a>
-							</div>
-							<div class="RotatorItem">
+							</span>
+							<span class="RotatorItem">
 								<a href="#"><img src="http://farm7.static.flickr.com/6041/6328670411_51a10483b2_b.jpg" alt=""/></a>
-							</div>
-							<div class="RotatorItem">
+							</span>
+							<span class="RotatorItem">
 								<a href="#"><img src="http://farm7.static.flickr.com/6033/6325301683_293882cd6f_b.jpg" alt=""/></a>
-							</div>
+							</span>
 						</div>
 					</div>
 					<a href="#" class="ShowPopup">Показать попап</a>
 				</div>
 				<div class="Footer">
-					<p class="Copyright">© 1999—2011 «Сайт»</p>
+					<p class="Copyright">© 1999—2012 «Сайт»</p>
 					<address>ул. Василия Пупкина 67, офис 123</address>
-					<address>Контактные телефоны: (343) 000-00-00</address>
+					<p>Контактные телефоны: (343) 000-00-00</p>
 				</div>
 			</div>
 		</div>
